# small-device

./: data_utils.py  pyproject.toml  run_curriculum_training.py  utils.py
compression/: debug.ipynb  playground.ipynb  tests.py
experiments/: data_utils.py  gpu_utils.py  run_curriculum_training.py  run_finetuning.py  run_lm_eval.py  utils.py
src/deltaGPT.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
